# rust_1

./: Cargo.toml
migrations/2024-04-26-062937_create_rustaceans/: up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs
